<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ControlE_TE2_HMI" Id="{aaad7ae1-4382-4a58-b1a8-734ee060a35a}">
    <Declaration><![CDATA[TYPE ST_ControlE_TE2_HMI :
STRUCT
	bZmienneTypoweDlaCE_TE2	: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>