<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ControlE_TE2_HMI_Link" Id="{b6e1dbb1-5f7f-4af8-acf8-a91c6b36bc14}">
    <Declaration><![CDATA[TYPE ST_ControlE_TE2_HMI_Link EXTENDS ST_BaseControlElement_HMI_Link :
STRUCT
	stControlE_TE2		: ST_ControlE_TE2_HMI;
	
	stComponetE1_TE2	: ST_Component_TE2_HMI_Link;
	stComponetE2_TE2	: ST_Component_TE2_HMI_Link;
	stComponetE3_TE2	: ST_Component_TE2_HMI_Link;
	stComponetE4_TE2	: ST_Component_TE2_HMI_Link;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>